# ent-aiml-template

./: LICENSE.txt  Makefile  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  Makefile  README.md  pyproject.toml
